# noidea

./: .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  STYLE.md  TODO.md  demo.cast  go.mod  go.sum  index.html  install.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/agent-memory/docs-maintainer/: MEMORY.md  project_docs_structure.md
.claude/agents/: docs-maintainer.md
.github/ISSUE_TEMPLATE/: commit-feedback-standalone.md
.github/workflows/: publish.yml  release.yml  test.yml
assets/: demo.cast
assets/javascripts/: bundle.13a4f30d.min.js  bundle.79ae519e.min.js  bundle.c8b220af.min.js  bundle.f55a23d4.min.js
blog/: index.html
blog/archive/2024/: index.html
blog/building-a-cross-platform-secure-api-key-manager-in-go/: index.html
blog/category/development/: index.html
cmd/: github_auth.go  init.go  issue.go  moai.go  root.go  root_test.go  suggest.go  summary.go  update.go
dev-guide/code-style/: index.html
dev-guide/core-components/: index.html
dev-guide/overview/: index.html
dev-guide/plugins/: index.html
dev-guide/project-structure/: index.html
dev-guide/testing/: index.html
docs/: TIGERSTYLE_MIGRATION.md  conf.py  index.md  index.rst  requirements.txt  roadmap.md
docs/source/: conf.py
docs/user-guide/: configuration.md  getting-started.md
internal/config/: config.go  config_test.go
internal/feedback/: engine.go  engine_test.go  unified.go
internal/git/: hooks.go
internal/github/: auth.go  client_test.go  issues.go  repo.go
noidea/: __init__.py  cli.py  config.py  git.py  provider.py
noidea/commands/: __init__.py  init.py  keys.py  status.py  suggest.py  test.py  update.py
roadmap/: index.html
scripts/: install-hooks.sh  post-commit.sh  prepare-commit-msg
search/: search_index.json
tests/: simulation_tester.go  test_cli.py  test_config.py  test_git.py  test_provider.py
tests/test_suites/: suggest_tests.json
user-guide/configuration/: index.html
user-guide/getting-started/: index.html
user-guide/installation/: index.html
user-guide/troubleshooting/: index.html
(+24 files in other folders)
