[project]
name = "noidea"
version = "0.3.0"
description = "AI powered commit suggestions"
authors = [
    {name = "AccursedGalaxy",email = "robinbohrer7@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic (>=0.85.0,<0.86.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "typer (>=0.24.1,<0.25.0)",
    "keyring (>=25.7.0,<26.0.0)",
    "rich (>=13.0.0)",
]

[project.scripts]
noidea = "noidea.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
