[project]
name = "noidea"
version = "0.5.4"
description = "You have no idea what to write? We've got you."
authors = [
    {name = "AccursedGalaxy",email = "robinbohrer7@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic (>=0.85.0,<1.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "typer (>=0.24.1,<1.0.0)",
    "keyring (>=25.7.0,<26.0.0)",
    "rich (>=13.0.0)",
]

[project.scripts]
noidea = "noidea.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.3.1)",
    "isort (>=6.0.0,<7.0.0)",
    "pyright (>=1.1.0,<2.0.0)",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
